# InBill

./: .gitignore  PLAN.md  README.md  eslint.config.js  package.json  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  build-server-sidecar.sh  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: test_pg.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/patches/pg-embed/: Cargo.toml
apps/desktop/src-tauri/patches/pg-embed/src/: command_executor.rs  pg_access.rs  pg_commands.rs
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/host/: index.html  package.json  tsconfig.json  vite.config.js  vite.config.ts
apps/host/src/: App.js  App.tsx  index.css
apps/host/src/lib/: api.js  (+3 more)
apps/mobile/: index.html  package.json  vite.config.js  vite.config.ts
apps/mobile/src/: index.css  main.js  main.tsx  router.js  router.tsx
apps/pos/: eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.js  vite.config.ts
apps/pos/public/: loading.html
apps/pos/src/: App.js  App.tsx  index.css  main.js  main.tsx  router.js  router.tsx
apps/server/: .env.example  drizzle.config.ts  package.json  tsconfig.json
apps/server/src/: config.ts  index.ts
docs/: api-reference.md  architecture.md  auth-and-roles.md  database-schema.md  getting-started.md  process-flows.md
docs/modules/: ai.md  crm.md  discounts.md  inventory.md  menu.md  owner.md  pos.md  reports.md  shifts.md  vendors.md
(+126 files in other folders)
