[package]
name = "inbill-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "inbill_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[package.metadata.tauri]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pg-embed = { version = "0.7", features = ["rt_tokio"] }
tokio = { version = "1", features = ["full"] }
